project/overlays/staging/route-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: todo-app-route
spec:
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /staging/todos
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /todos
      backendRefs:
        - name: todo-app-svc
          port: 1234
